# nbb

./: .gitignore  .project  GNUmakefile.in  Makefile-files  Makefile.am  NEWS  README  TODO  build.xml  configure.ac
.externalToolBuilders/: Ant Glue Builder.launch
build-helpers/: package-version.mk
m4/: ndim-check-sh-command-substitution.m4  ndim-check-sh-functions.m4  ndim-check-sh-param-expansion.m4  ndim-detect-man2txt.m4  ndim-require-posix-sh.m4
nbb/: Makefile-files  nbb.in  nbb_lib.in  nbblib.in
nbb/nbblib/: __init__.in  __init__.py  bs.py  commands.py  main.py  plugins.py  progutils.py  vcs.py
src/: Makefile-files  nbb.in
src/nbblib/: __init__.py  bs.py  commands.py  main.py  nbbcommands.py  newplugin-test.py  newplugins.py  package.in  plugins.py  progutils.py  test-plugins.py  vcs.py
test/: Makefile.am  local.at  nbb-automake.at  nbb-basic.at  nbb-config.at  nbb-detect.at  nbb-runsh.at  nbb-scons.at
